# TactilityApps

./: .gitignore  LICENSE.md  README.md  fetch_external_apps.py  release.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/build-app/: action.yml
.github/actions/fetch-app/: action.yml
.github/actions/fetch-apps/: action.yml
.github/actions/release-apps/: action.yml
.github/workflows/: build-app.yml  build-apps.yml  main.yml  release-apps.yml
App/: README.md
App/Source/: Main.cpp
Apps/Calculator/: manifest.properties  tactility.py
Apps/Calculator/main/: CMakeLists.txt
Apps/Calculator/main/Source/: Calculator.cpp  Calculator.h  main.cpp
Apps/Diceware/: CMakeLists.txt  manifest.properties
Apps/Diceware/main/: CMakeLists.txt
Apps/Diceware/main/Source/: Application.cpp  Application.h  Diceware.cpp  Diceware.h  main.cpp
Apps/GPIO/: CMakeLists.txt  manifest.properties
Apps/GPIO/main/: CMakeLists.txt
Apps/GPIO/main/Source/: Application.cpp  (+4 more)
Apps/GraphicsDemo/: manifest.properties  tactility.py
Apps/HelloWorld/: manifest.properties  tactility.py
Apps/Picotility/: fetch.properties
Apps/SerialConsole/: CMakeLists.txt  manifest.properties
Apps/SerialConsole/main/: CMakeLists.txt
Apps/TactileWeb/: fetch.properties
Apps/TwoEleven/: CMakeLists.txt  README.md  manifest.properties  tactility.py
Apps/TwoEleven/main/: CMakeLists.txt
Documentation/: external-apps.md
Libraries/Str/: CMakeLists.txt  README.md
Libraries/TactilityCpp/: README.md
Libraries/TactilityCpp/Source/: Lock.cpp
TactileWeb/: index.html  main.cpp  manifest.txt
(+23 files in other folders)
